--- a/src/modules/responsive/_margin.scss
+++ b/src/modules/responsive/_margin.scss
@@ -1,10 +1,11 @@
 // Add auto as a level for margins with -auto suffix
+// NB: Margin-all and margin-vertical rules do not include the '-auto' suffix
 $margin-spacer-levels: map-merge($spacer-levels, ("-auto": auto));
 
 @mixin margin($media-suffix) {
 
   // Margin all
-  @each $level, $value in $margin-spacer-levels {
+  @each $level, $value in $spacer-levels {
     .m#{$level}#{$media-suffix} { margin: $value; }
   }
 
@@ -37,7 +38,7 @@ $margin-spacer-levels: map-merge($spacer-levels, ("-auto": auto));
   }
 
   // Margin vertical
-  @each $level, $value in $margin-spacer-levels {
+  @each $level, $value in $spacer-levels {
     .mv#{$level}#{$media-suffix} {
       margin-top: $value;
       margin-bottom: $value;
