--- a/src/c4s-l.scss
+++ b/src/c4s-l.scss
@@ -6,6 +6,6 @@
 @import 'variables';
 @import 'modules/responsive-all';
 
-@media only screen and (min-width: 60em) and (max-width: 90em) {
+@media only screen and (min-width: 60em) {
   @include responsive-all(-l);
 }
