--- a/src/c4s-m.scss
+++ b/src/c4s-m.scss
@@ -6,6 +6,6 @@
 @import 'variables';
 @import 'modules/responsive-all';
 
-@media only screen and (min-width: 30em) and (max-width: 60em) {
+@media only screen and (min-width: 30em) {
   @include responsive-all(-m);
 }
