--- a/src/c4s-s.scss
+++ b/src/c4s-s.scss
@@ -6,6 +6,6 @@
 @import 'variables';
 @import 'modules/responsive-all';
 
-@media only screen and (max-width: 30em) {
+@media only screen and (min-width: 20em) {
   @include responsive-all(-s);
 }
