--- a/src/modules/_non-responsive-all.scss
+++ b/src/modules/_non-responsive-all.scss
@@ -4,26 +4,26 @@
    These imports are not mixins and therefore do not have
    media specific suffixes
  */
-@import 'non-responsive/complex';
-@import 'non-responsive/reset';
-@import 'non-responsive/color';
-@import 'non-responsive/hover-color';
-@import 'non-responsive/background-color';
-@import 'non-responsive/hover-background-color';
-@import 'non-responsive/border';
-@import 'non-responsive/border-width';
-@import 'non-responsive/border-color';
-@import 'non-responsive/border-style';
-@import 'non-responsive/font-family';
-@import 'non-responsive/font-style';
-@import 'non-responsive/text-decoration';
-@import 'non-responsive/text-transform';
-@import 'non-responsive/text-align';
-@import 'non-responsive/opacity';
-@import 'non-responsive/transform';
-@import 'non-responsive/transition';
-@import 'non-responsive/visibility';
-@import 'non-responsive/box-sizing';
-@import 'non-responsive/cursor';
-@import 'non-responsive/miscellaneous';
-@import 'non-responsive/debug';
+@use 'non-responsive/complex';
+@use 'non-responsive/reset';
+@use 'non-responsive/color';
+@use 'non-responsive/hover-color';
+@use 'non-responsive/background-color';
+@use 'non-responsive/hover-background-color';
+@use 'non-responsive/border';
+@use 'non-responsive/border-width';
+@use 'non-responsive/border-color';
+@use 'non-responsive/border-style';
+@use 'non-responsive/font-family';
+@use 'non-responsive/font-style';
+@use 'non-responsive/text-decoration';
+@use 'non-responsive/text-transform';
+@use 'non-responsive/text-align';
+@use 'non-responsive/opacity';
+@use 'non-responsive/transform';
+@use 'non-responsive/transition';
+@use 'non-responsive/visibility';
+@use 'non-responsive/box-sizing';
+@use 'non-responsive/cursor';
+@use 'non-responsive/miscellaneous';
+@use 'non-responsive/debug';
