--- a/src/modules/responsive/_border-radius.scss
+++ b/src/modules/responsive/_border-radius.scss
@@ -1,6 +1,8 @@
+@use '../../variables';
+
 @mixin border-radius($media-suffix) {
 
-  @each $level, $value in $border-radius-levels {
+  @each $level, $value in variables.$border-radius-levels {
     .br#{$level}#{$media-suffix} { border-radius: $value; }
   }
 
