--- a/src/modules/responsive/_padding.scss
+++ b/src/modules/responsive/_padding.scss
@@ -1,32 +1,34 @@
+@use '../../variables';
+
 @mixin padding($media-suffix) {
 
   // Padding all
-  @each $level, $value in $spacer-levels {
+  @each $level, $value in variables.$spacer-levels {
     .p#{$level}#{$media-suffix} { padding: $value; }
   }
 
   // Padding top
-  @each $level, $value in $spacer-levels {
+  @each $level, $value in variables.$spacer-levels {
     .pt#{$level}#{$media-suffix} { padding-top: $value; }
   }
 
   // Padding right
-  @each $level, $value in $spacer-levels {
+  @each $level, $value in variables.$spacer-levels {
     .pr#{$level}#{$media-suffix} { padding-right: $value; }
   }
 
   // Padding bottom
-  @each $level, $value in $spacer-levels {
+  @each $level, $value in variables.$spacer-levels {
     .pb#{$level}#{$media-suffix} { padding-bottom: $value; }
   }
 
   // Padding left
-  @each $level, $value in $spacer-levels {
+  @each $level, $value in variables.$spacer-levels {
     .pl#{$level}#{$media-suffix} { padding-left: $value; }
   }
 
   // Padding horizontal
-  @each $level, $value in $spacer-levels {
+  @each $level, $value in variables.$spacer-levels {
     .ph#{$level}#{$media-suffix} {
       padding-left: $value;
       padding-right: $value;
@@ -34,7 +36,7 @@
   }
 
   // Padding vertical
-  @each $level, $value in $spacer-levels {
+  @each $level, $value in variables.$spacer-levels {
     .pv#{$level}#{$media-suffix} {
       padding-top: $value;
       padding-bottom: $value;
