--- a/src/modules/responsive/display-base.scss
+++ b/src/modules/responsive/display-base.scss
@@ -1,5 +1,5 @@
-@import '../../functions';
-@import '../../variables';
-@import './display';
+@use '../../functions';
+@use '../../variables';
+@use './display';
 
-@include display ('');
+@include display.display('');
