--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,3 +1,6 @@
+@use './functions' as *;
+@use 'sass:color';
+
 /*
    SPACERS
 
@@ -10,15 +13,15 @@
 $spacer-base: 2rem !default;
 
 $spacer-levels: (
-  "0": 0,
-  "1": $spacer-base * nth-power-of-two(-3),
-  "2": $spacer-base * nth-power-of-two(-2),
-  "3": $spacer-base * nth-power-of-two(-1),
-  "4": $spacer-base,
-  "5": $spacer-base * nth-power-of-two(1),
-  "6": $spacer-base * nth-power-of-two(2),
-  "7": $spacer-base * nth-power-of-two(3)
-);
+  '0': 0,
+  '1': $spacer-base * nth-power-of-two(-3),
+  '2': $spacer-base * nth-power-of-two(-2),
+  '3': $spacer-base * nth-power-of-two(-1),
+  '4': $spacer-base,
+  '5': $spacer-base * nth-power-of-two(1),
+  '6': $spacer-base * nth-power-of-two(2),
+  '7': $spacer-base * nth-power-of-two(3)
+) !default;
 
 /*
    COORDINATE SPACERS
@@ -27,12 +30,12 @@ $spacer-levels: (
  */
 
 $coordinate-spacer-levels: (
-  "-0":   0,
-  "-1":   1rem,
-  "-2":   2rem,
-  "-50":  50%,
-  "-100": 100%
-);
+  '-0':   0,
+  '-1':   1rem,
+  '-2':   2rem,
+  '-50':  50%,
+  '-100': 100%
+) !default;
 
 /*
    SIZERS
@@ -45,146 +48,146 @@ $coordinate-spacer-levels: (
 $sizer-base: 1rem !default;
 
 $sizer-levels: (
-  "0":           0,
-  "1":           $sizer-base,
-  "2":           $sizer-base * nth-power-of-two(1),
-  "3":           $sizer-base * nth-power-of-two(2),
-  "4":           $sizer-base * nth-power-of-two(3),
-  "5":           $sizer-base * nth-power-of-two(4),
-  "6":           $sizer-base * nth-power-of-two(5),
-  "-10":         10%,
-  "-20":         20%,
-  "-30":         30%,
-  "-third":      100% / 3,
-  "-40":         40%,
-  "-50":         50%,
-  "-60":         60%,
-  "-two-thirds": 100% * 2 / 3,
-  "-70":         70%,
-  "-80":         80%,
-  "-90":         90%,
-  "-100":        100%
-);
+  '0':           0,
+  '1':           $sizer-base,
+  '2':           $sizer-base * nth-power-of-two(1),
+  '3':           $sizer-base * nth-power-of-two(2),
+  '4':           $sizer-base * nth-power-of-two(3),
+  '5':           $sizer-base * nth-power-of-two(4),
+  '6':           $sizer-base * nth-power-of-two(5),
+  '-10':         10%,
+  '-20':         20%,
+  '-30':         30%,
+  '-third':      100% / 3,
+  '-40':         40%,
+  '-50':         50%,
+  '-60':         60%,
+  '-two-thirds': 100% * 2 / 3,
+  '-70':         70%,
+  '-80':         80%,
+  '-90':         90%,
+  '-100':        100%
+) !default;
 
 /*
    TRANSLATE
  */
 
 $translate-levels: (
-  "-0":    0,
-  "-100":  100%,
-  "-n100": -100%,
-  "-50":   50%,
-  "-n50":  -50%
-);
+  '-0':    0,
+  '-100':  100%,
+  '-n100': -100%,
+  '-50':   50%,
+  '-n50':  -50%
+) !default;
 
 /*
    TRANSITION SPEED
  */
 
 $transition-speeds: (
-  "-slow":   .5s,
-  "-medium": .25s,
-  "-fast":   .15s
-);
+  '-slow':   .5s,
+  '-medium': .25s,
+  '-fast':   .15s
+) !default;
 
 /*
    COLORS
  */
 
-$black: #000;
-$white: #fff;
+$black: #000 !default;
+$white: #fff !default;
 
 $colors: (
   /*
      Black/gray/white
    */
-  "black":         $black,
-  "near-black":    #111,
-  "dark-gray":     #333,
-  "mid-gray":      #555,
-  "gray":          #777,
-  "silver":        #999,
-  "light-silver":  #aaa,
-  "moon-gray":     #ccc,
-  "light-gray":    #eee,
-  "near-white":    #f4f4f4,
-  "white":         $white,
+  'black':         $black,
+  'near-black':    #111,
+  'dark-gray':     #333,
+  'mid-gray':      #555,
+  'gray':          #777,
+  'silver':        #999,
+  'light-silver':  #aaa,
+  'moon-gray':     #ccc,
+  'light-gray':    #eee,
+  'near-white':    #f4f4f4,
+  'white':         $white,
   /*
      Red
    */
-  "dark-red":      #e7040f,
-  "red":           #ff4136,
-  "light-red":     #ff725c,
-  "washed-red":    #ffdfdf,
+  'dark-red':      #e7040f,
+  'red':           #ff4136,
+  'light-red':     #ff725c,
+  'washed-red':    #ffdfdf,
   /*
      Orange/yellow
    */
-  "orange":        #ff6300,
-  "gold":          #ffb700,
-  "yellow":        #ffd700,
-  "light-yellow":  #fbf1a9,
-  "washed-yellow": #fffceb,
+  'orange':        #ff6300,
+  'gold':          #ffb700,
+  'yellow':        #ffd700,
+  'light-yellow':  #fbf1a9,
+  'washed-yellow': #fffceb,
   /*
      Purple/pink
    */
-  "purple":        #5e2ca5,
-  "light-purple":  #a463f2,
-  "dark-pink":     #d5008f,
-  "hot-pink":      #ff41b4,
-  "pink":          #ff80cc,
-  "light-pink":    #ffa3d7,
+  'purple':        #5e2ca5,
+  'light-purple':  #a463f2,
+  'dark-pink':     #d5008f,
+  'hot-pink':      #ff41b4,
+  'pink':          #ff80cc,
+  'light-pink':    #ffa3d7,
   /*
      Green
    */
-  "dark-green":    #137752,
-  "green":         #19a974,
-  "light-green":   #9eebcf,
-  "washed-green":  #e8fdf5,
+  'dark-green':    #137752,
+  'green':         #19a974,
+  'light-green':   #9eebcf,
+  'washed-green':  #e8fdf5,
   /*
      Blue
    */
-  "navy":          #001b44,
-  "dark-blue":     #00449e,
-  "blue":          #357edd,
-  "light-blue":    #96ccff,
-  "lightest-blue": #cdecff,
-  "washed-blue":   #f6fffe,
+  'navy':          #001b44,
+  'dark-blue':     #00449e,
+  'blue':          #357edd,
+  'light-blue':    #96ccff,
+  'lightest-blue': #cdecff,
+  'washed-blue':   #f6fffe,
   /*
      Black opacity variations
    */
-  "black-90":      scale-color($black, $alpha: -10%),
-  "black-80":      scale-color($black, $alpha: -20%),
-  "black-70":      scale-color($black, $alpha: -30%),
-  "black-60":      scale-color($black, $alpha: -40%),
-  "black-50":      scale-color($black, $alpha: -50%),
-  "black-40":      scale-color($black, $alpha: -60%),
-  "black-30":      scale-color($black, $alpha: -70%),
-  "black-20":      scale-color($black, $alpha: -80%),
-  "black-10":      scale-color($black, $alpha: -90%),
-  "black-05":      scale-color($black, $alpha: -95%),
-  "black-025":     scale-color($black, $alpha: -97.5%),
-  "black-0125":    scale-color($black, $alpha: -98.75%),
+  'black-90':      color.scale($black, $alpha: -10%),
+  'black-80':      color.scale($black, $alpha: -20%),
+  'black-70':      color.scale($black, $alpha: -30%),
+  'black-60':      color.scale($black, $alpha: -40%),
+  'black-50':      color.scale($black, $alpha: -50%),
+  'black-40':      color.scale($black, $alpha: -60%),
+  'black-30':      color.scale($black, $alpha: -70%),
+  'black-20':      color.scale($black, $alpha: -80%),
+  'black-10':      color.scale($black, $alpha: -90%),
+  'black-05':      color.scale($black, $alpha: -95%),
+  'black-025':     color.scale($black, $alpha: -97.5%),
+  'black-0125':    color.scale($black, $alpha: -98.75%),
   /*
      White opacity variations
    */
-  "white-90":      scale-color($white, $alpha: -10%),
-  "white-80":      scale-color($white, $alpha: -20%),
-  "white-70":      scale-color($white, $alpha: -30%),
-  "white-60":      scale-color($white, $alpha: -40%),
-  "white-50":      scale-color($white, $alpha: -50%),
-  "white-40":      scale-color($white, $alpha: -60%),
-  "white-30":      scale-color($white, $alpha: -70%),
-  "white-20":      scale-color($white, $alpha: -80%),
-  "white-10":      scale-color($white, $alpha: -90%),
-  "white-05":      scale-color($white, $alpha: -95%),
-  "white-025":     scale-color($white, $alpha: -97.5%),
-  "white-0125":    scale-color($white, $alpha: -98.75%),
+  'white-90':      color.scale($white, $alpha: -10%),
+  'white-80':      color.scale($white, $alpha: -20%),
+  'white-70':      color.scale($white, $alpha: -30%),
+  'white-60':      color.scale($white, $alpha: -40%),
+  'white-50':      color.scale($white, $alpha: -50%),
+  'white-40':      color.scale($white, $alpha: -60%),
+  'white-30':      color.scale($white, $alpha: -70%),
+  'white-20':      color.scale($white, $alpha: -80%),
+  'white-10':      color.scale($white, $alpha: -90%),
+  'white-05':      color.scale($white, $alpha: -95%),
+  'white-025':     color.scale($white, $alpha: -97.5%),
+  'white-0125':    color.scale($white, $alpha: -98.75%),
   /*
      Transparent
    */
-  "transparent": transparent
-);
+  'transparent': transparent
+) !default;
 
 /*
    BORDER-RADIUS SIZES
@@ -193,14 +196,14 @@ $colors: (
 $border-radius-base: 1rem !default;
 
 $border-radius-levels: (
-  "0":     0,
-  "1":     $border-radius-base * nth-power-of-two(-3),
-  "2":     $border-radius-base * nth-power-of-two(-2),
-  "3":     $border-radius-base * nth-power-of-two(-1),
-  "4":     $border-radius-base,
-  "-100":  100%,
-  "-pill": 9999px
-);
+  '0':     0,
+  '1':     $border-radius-base * nth-power-of-two(-3),
+  '2':     $border-radius-base * nth-power-of-two(-2),
+  '3':     $border-radius-base * nth-power-of-two(-1),
+  '4':     $border-radius-base,
+  '-100':  100%,
+  '-pill': 9999px
+) !default;
 
 /*
    FONT SIZES
@@ -214,79 +217,80 @@ $font-scaling-factor: 1.25 !default;
 
 $font-size-headline:    6rem !default;
 $font-size-subheadline: 5rem !default;
-$font-size-h1:          $font-size-base * pow($font-scaling-factor, 5);
-$font-size-h2:          $font-size-base * pow($font-scaling-factor, 4);
-$font-size-h3:          $font-size-base * pow($font-scaling-factor, 3);
-$font-size-h4:          $font-size-base * pow($font-scaling-factor, 2);
-$font-size-h5:          $font-size-base * pow($font-scaling-factor, 1);
+$font-size-h1:          $font-size-base * pow($font-scaling-factor, 5) !default;
+$font-size-h2:          $font-size-base * pow($font-scaling-factor, 4) !default;
+$font-size-h3:          $font-size-base * pow($font-scaling-factor, 3) !default;
+$font-size-h4:          $font-size-base * pow($font-scaling-factor, 2) !default;
+$font-size-h5:          $font-size-base * pow($font-scaling-factor, 1) !default;
 $font-size-h6:          $font-size-base;
-$font-size-small:       $font-size-base * pow($font-scaling-factor, -1);
+$font-size-small:       $font-size-base * pow($font-scaling-factor, -1) !default;
 
 /*
    LINE HEIGHTS
  */
 
 $line-height-levels: (
-  "solid":  1,
-  "header": 1.15,
-  "text":   1.5,
-  "extra":  2
-);
+  'solid':  1,
+  'header': 1.15,
+  'text':   1.5,
+  'extra':  2
+) !default;
 
 /*
    FONT WEIGHTS
  */
 
 $font-weight-levels: (
-  "-100":     100,
-  "-200":     200,
-  "-300":     300,
-  "-normal":  400, // font-weight 400 is normal
-  "-500":     500,
-  "-600":     600,
-  "-bold":    700, // font-weight 700 is bold
-  "-800":     800,
-  "-900":     900,
-  "-lighter": lighter,
-  "-bolder":  bolder
-);
+  '-100':     100,
+  '-200':     200,
+  '-300':     300,
+  '-normal':  400, // font-weight 400 is normal
+  '-500':     500,
+  '-600':     600,
+  '-bold':    700, // font-weight 700 is bold
+  '-800':     800,
+  '-900':     900,
+  '-lighter': lighter,
+  '-bolder':  bolder
+) !default;
 
 /*
    OPACITY LEVELS
  */
 
 $opacity-levels: (
-  "-100":  1,
-  "-90":   .9,
-  "-80":   .8,
-  "-70":   .7,
-  "-60":   .6,
-  "-50":   .5,
-  "-40":   .4,
-  "-30":   .3,
-  "-20":   .2,
-  "-10":   .1,
-  "-05":   .05,
-  "-025":  .025,
-  "-0":    0
-);
+  '-100':  1,
+  '-90':   .9,
+  '-80':   .8,
+  '-70':   .7,
+  '-60':   .6,
+  '-50':   .5,
+  '-40':   .4,
+  '-30':   .3,
+  '-20':   .2,
+  '-10':   .1,
+  '-05':   .05,
+  '-025':  .025,
+  '-0':    0
+) !default;
 
 /*
    BORDER STYLES
  */
 
-$border-styles: dotted, dashed, double, groove, ridge, inset, outset;
+// stylelint-disable-next-line max-line-length
+$border-styles: [ solid, dotted, dashed, double, groove, ridge, inset, outset ] !default;
 
 /*
    BORDER WIDTHS
  */
 
-$border-width-base: 1rem;
+$border-width-base: 1rem !default;
 
 $border-widths: (
-  "1": $border-width-base * nth-power-of-two(-3),
-  "2": $border-width-base * nth-power-of-two(-2),
-  "3": $border-width-base * nth-power-of-two(-1),
-  "4": $border-width-base,
-  "5": $border-width-base * nth-power-of-two(1)
-);
+  '1': $border-width-base * nth-power-of-two(-3),
+  '2': $border-width-base * nth-power-of-two(-2),
+  '3': $border-width-base * nth-power-of-two(-1),
+  '4': $border-width-base,
+  '5': $border-width-base * nth-power-of-two(1)
+) !default;
