--- a/src/c4s-h.scss
+++ b/src/c4s-h.scss
@@ -2,10 +2,10 @@
    Huge viewports
  */
 
-@import 'functions';
-@import 'variables';
-@import 'modules/responsive-all';
+@use 'functions';
+@use 'variables';
+@use 'modules/responsive-all';
 
 @media only screen and (min-width: 90em) {
-  @include responsive-all(-h);
+  @include responsive-all.responsive-all(-h);
 }
