--- a/src/c4s-m.scss
+++ b/src/c4s-m.scss
@@ -2,10 +2,10 @@
    Medium viewports
  */
 
-@import 'functions';
-@import 'variables';
-@import 'modules/responsive-all';
+@use 'functions';
+@use 'variables';
+@use 'modules/responsive-all';
 
 @media only screen and (min-width: 30em) {
-  @include responsive-all(-m);
+  @include responsive-all.responsive-all(-m);
 }
