--- a/src/modules/non-responsive/border-color.scss
+++ b/src/modules/non-responsive/border-color.scss
@@ -1,6 +1,5 @@
-@import '../../functions';
-@import '../../variables';
+@use '../../variables';
 
-@each $color, $value in $colors {
+@each $color, $value in variables.$colors {
   .b--#{$color} { border-color: $value; }
 }
