--- a/src/modules/non-responsive/hover-background-color.scss
+++ b/src/modules/non-responsive/hover-background-color.scss
@@ -1,6 +1,5 @@
-@import '../../functions';
-@import '../../variables';
+@use '../../variables';
 
-@each $color, $value in $colors {
+@each $color, $value in variables.$colors {
   .hover-bg-#{$color}:hover { background-color: $value; }
 }
