--- a/src/modules/non-responsive/miscellaneous.scss
+++ b/src/modules/non-responsive/miscellaneous.scss
@@ -1,6 +1,3 @@
-@import '../../functions';
-@import '../../variables';
-
 .list-reset {
   list-style: none;
   padding-left: 0;
@@ -23,7 +20,7 @@
   bottom: 0;
   left: 0;
   pointer-events: auto;
-  content: "";
+  content: '';
   background-color: transparent;
 }
 
