--- a/src/modules/non-responsive/reset.scss
+++ b/src/modules/non-responsive/reset.scss
@@ -1,5 +1,5 @@
-@import '../../functions';
-@import '../../variables';
+@use '../../variables';
+@use 'sass:map';
 
 html {
   line-height: 1.15;
@@ -33,15 +33,15 @@ h5,
 h6 {
   margin-top: 2.75rem;
   margin-bottom: 1rem;
-  line-height: map-get($line-height-levels, "header");
+  line-height: map.get(variables.$line-height-levels, 'header');
 }
 
-h1    { font-size: $font-size-h1; }
-h2    { font-size: $font-size-h2; }
-h3    { font-size: $font-size-h3; }
-h4    { font-size: $font-size-h4; }
-h5    { font-size: $font-size-h5; }
-h6    { font-size: $font-size-h6; }
-small { font-size: $font-size-small; }
+h1    { font-size: variables.$font-size-h1; }
+h2    { font-size: variables.$font-size-h2; }
+h3    { font-size: variables.$font-size-h3; }
+h4    { font-size: variables.$font-size-h4; }
+h5    { font-size: variables.$font-size-h5; }
+h6    { font-size: variables.$font-size-h6; }
+small { font-size: variables.$font-size-small; }
 
-p { line-height: map-get($line-height-levels, "text"); }
+p { line-height: map.get(variables.$line-height-levels, 'text'); }
