--- a/src/modules/responsive/border-radius-base.scss
+++ b/src/modules/responsive/border-radius-base.scss
@@ -1,5 +1,5 @@
-@import '../../functions';
-@import '../../variables';
-@import './border-radius';
+@use '../../functions';
+@use '../../variables';
+@use './border-radius';
 
-@include border-radius ('');
+@include border-radius.border-radius('');
