--- a/src/modules/responsive/coordinates-base.scss
+++ b/src/modules/responsive/coordinates-base.scss
@@ -1,5 +1,5 @@
-@import '../../functions';
-@import '../../variables';
-@import './coordinates';
+@use '../../functions';
+@use '../../variables';
+@use './coordinates';
 
-@include coordinates ('');
+@include coordinates.coordinates('');
