--- a/src/modules/responsive/float-base.scss
+++ b/src/modules/responsive/float-base.scss
@@ -1,5 +1,5 @@
-@import '../../functions';
-@import '../../variables';
-@import './float';
+@use '../../functions';
+@use '../../variables';
+@use './float';
 
-@include float ('');
+@include float.float('');
