--- a/src/modules/responsive/margin-base.scss
+++ b/src/modules/responsive/margin-base.scss
@@ -1,5 +1,5 @@
-@import '../../functions';
-@import '../../variables';
-@import './margin';
+@use '../../functions';
+@use '../../variables';
+@use './margin';
 
-@include margin ('');
+@include margin.margin('');
