--- a/src/modules/responsive/padding-base.scss
+++ b/src/modules/responsive/padding-base.scss
@@ -1,5 +1,5 @@
-@import '../../functions';
-@import '../../variables';
-@import './padding';
+@use '../../functions';
+@use '../../variables';
+@use './padding';
 
-@include padding ('');
+@include padding.padding('');
