--- a/src/modules/responsive/tracking-base.scss
+++ b/src/modules/responsive/tracking-base.scss
@@ -1,5 +1,5 @@
-@import '../../functions';
-@import '../../variables';
-@import './tracking';
+@use '../../functions';
+@use '../../variables';
+@use './tracking';
 
-@include tracking ('');
+@include tracking.tracking('');
