Add styles for text-shadow

--- a/src/modules/_non-responsive-all.scss
+++ b/src/modules/_non-responsive-all.scss
@@ -17,6 +17,7 @@
 @use 'non-responsive/font-family';
 @use 'non-responsive/font-style';
 @use 'non-responsive/text-decoration';
+@use 'non-responsive/text-shadow';
 @use 'non-responsive/text-transform';
 @use 'non-responsive/text-align';
 @use 'non-responsive/opacity';
