--- a/src/modules/non-responsive/complex.scss
+++ b/src/modules/non-responsive/complex.scss
@@ -1,16 +1,48 @@
+@use '../../variables';
+
 /*
-   Complex styles are CSS rules that are either context-dependent,
+   Complex rules are CSS rules that are either context-dependent,
    have more than one selector or more than two properties.
-   These styles are not considered atomic CSS.
+   These rules are not considered atomic CSS.
 
  */
 
+// Border top between
 .bt-between + .bt-between {
   border-top-style: solid;
   border-top-width: 1px;
 }
 
+// Border left between
 .bl-between + .bl-between {
   border-left-style: solid;
   border-left-width: 1px;
+}
+
+// Padding top between
+@each $level, $value in variables.$spacer-levels {
+  .pt#{$level}-between + .pt#{$level}-between {
+    padding-top: $value;
+  }
+}
+
+// Padding left between
+@each $level, $value in variables.$spacer-levels {
+  .pl#{$level}-between + .pl#{$level}-between {
+    padding-left: $value;
+  }
+}
+
+// Margin top between
+@each $level, $value in variables.$spacer-levels {
+  .mt#{$level}-between + .mt#{$level}-between {
+    margin-top: $value;
+  }
+}
+
+// Margin left between
+@each $level, $value in variables.$spacer-levels {
+  .ml#{$level}-between + .ml#{$level}-between {
+    margin-left: $value;
+  }
 }
